# front-end-framework-bench

./: .gitignore  LICENSE.txt  README.md  build.sh  index.html  index.ts  main.css  metrics.ts  package-lock.json  package.json
.github/workflows/: puppeteer-bench.yml
apps/es-next/: index.js
apps/es-next-bench/: index.js  index.ts  tsconfig.json
apps/javascript/: index.js
apps/react/: index.js
apps/react-bench/: index.html  index.js
apps/rust-fel/: Cargo.toml  build.sh  index.js
apps/rust-fel-bench/: .gitignore  Cargo.toml  README.md  build.sh  index.html  index.ts  package-lock.json  package.json
apps/rust-fel-bench/src/: lib.rs  main_component.rs  table.rs
apps/rust-fel/src/: handle.rs  lib.rs  main_component.rs  table.rs
apps/rust-wasm/: Cargo.toml  index.js  varTracker.js
apps/rust-wasm-bench/: .gitignore  Cargo.toml  build.sh  index.js  index.js.map  main.css  package.json  tsconfig.json
apps/rust-wasm/src/: js.rs  lib.rs
apps/svelte/: index.js
apps/vue/: index.js
apps/vue-bench/: app.js  index.html  index.js  table.js
apps/web-component/: index.js
apps/web-component-bench/: index.js
trace-generator/: .eslintrc.js  .gitignore  configs.ts  css.ts  index.ts  manageFiles.ts  metrics.ts  package-lock.json  package.json  tsconfig.json
trace-generator/scripts/: configs.ts  css.ts  index.ts  manageFiles.ts  measureEvent.ts  metrics.ts
trace-processor/: .gitignore  Cargo.toml  trace_results.json  trace_results.txt
trace-processor/src/: main.rs
trace-results/: trace-results.json
trace_results/: trace_results.txt
(+6 files in other folders)
