[package]
name = "trace-processor"
version = "0.1.0"
authors = ["Torre <tostaylo1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.115"
serde_json = "1.0.57"
serde_derive = "1.0.115"
prettytable-rs = "^0.8"
