[package]
name = "rust-fel-bench"
version = "0.1.0"
authors = ["Torre Taylor"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.67"
rust-fel = "0.1.2"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3.44"
features = [
  'Document', 
  'Element',
  'HtmlElement',
  'HtmlInputElement',
  'Node',
  'NodeList',
  'Window',
  'Text',
]

[profile.release]
lto = true
opt-level = 3
